/*
 * Version 5 of grpc helloworld service
 * This version adds SayNewHello which returns a stream resp
 * To keep compatible with old versions (e.g. v2), it remains SayHello as is.
 */

syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  rpc Version(VersionRequest) returns (VersionResponse) {}
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayNewHello(HelloRequest) returns (stream HelloReply) {}
}

// The request message containing name and client version.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings and server's version.
message HelloReply {
  string message = 1;
}

message VersionRequest{
  string version =1;
}

message VersionResponse{
  string version =1;
}
